# Semester_2

./: .gitignore  .pdm-python  Leistungstest_Jakob_L.py  Leistungstest_Jakob_w.py  README.md  pyproject.toml
Jakob L/: main.py  my_function.py
Jakob W/: main.py
JakobL/: Leistungstest_Jakob_L.py  main.py  my_classes.py  my_function.py  test.py
JakobW/: Leistungstest_Jakob_w.py  main.py  my_classes.py  my_functions.py  test.py
Janick/: leistungstest_Janick.py  main.py  my_classes.py  my_functions.py  test.py
